# wasm32-wasi-benchmark

./: .gitignore  CMakeLists.txt  README.md  benchmark.sh  build.sh  configure.sh  csv2md.py  test.sh
docker/: Dockerfile
emcc/: CMakeLists.txt
native/: CMakeLists.txt
nodejs/: Dockerfile  binarytrees-node-7.js  cat-sync.js  fannkuchredux.node-5.js  fannkuchredux.node.js  fasta.node-1.js  mandelbrot.node-3.js  nbody.node-6.js  readme.md
spec/: clock.c  f32.c  f64.c  fd.c  i32.c  i64.c
src/: binary-trees.c  cat-sync.c  mandelbrot.c
v8/: index.js
wasm/: CMakeLists.txt
wasm/sysroot/include/: __errno.h  unwind.h
wasm/sysroot/include/c++/v1/: __config
wasm/sysroot/lib/wasm32-wasi/: crt1.bc  libc-printscan-long-double.bc  libc-printscan-no-floating-point.bc  libc.bc  libwasi-emulated-getpid.bc  libwasi-emulated-mman.bc  libwasi-emulated-process-clocks.bc  libwasi-emulated-signal.bc
wasm/sysroot/share/wasm32-wasi/: defined-symbols.txt  predefined-macros.txt  undefined-symbols.txt
